apps/blocky/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: blocky
  labels:
    app.kubernetes.io/component: monitoring
