apps/blocky/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: blocky-ui
  labels:
    app: blocky-ui
spec:
  selector:
    matchLabels:
      app: blocky-ui
  template:
    metadata:
      labels:
        app: blocky-ui
    spec:
      containers:
        - name: blocky-ui
          image: gabrielduartem/blocky-ui:1.8.0
          ports:
            - containerPort: 3000
              name: web
