apps/blocky/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: blocky-svc
spec:
  type: LoadBalancer
  ipFamilyPolicy: PreferDualStack
  ipFamilies:
    - IPv4
    - IPv6
  ports:
    - name: prometheus
      port: 4000
      targetPort: prometheus
    - name: dns-tcp
      port: 53
      targetPort: dns-tcp
    - name: dns-udp
      protocol: UDP
      port: 53
      targetPort: dns-udp
  externalTrafficPolicy: Local
  selector:
    app.kubernetes.io/name: blocky
